unpackaged/main/default/objects/litify_docs__File_Info__c/litify_docs__File_Info__c.object-meta.xml
<CustomObject>
    <description>Object that tracks information about stored files.</description>
    <label>File Info</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>