unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Author__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Author__c</fullName>
    <description>The author of the file.</description>
    <label>Author</label>
    <length>128</length>
    <type>Text</type>
</CustomField>