unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Bulk_Merge_Job__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Bulk_Merge_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Bulk Merge Job from which this file originated.</description>
    <label>Bulk Merge Job</label>
    <referenceTo>litify_docs__Bulk_Merge_Job__c</referenceTo>
    <relationshipLabel>File Info</relationshipLabel>
    <relationshipName>File_Info</relationshipName>
    <type>Lookup</type>
</CustomField>