unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Classification__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medical_bill</fullName>
                <label>Medical Bill</label>
            </value>
            <value>
                <fullName>insurance_declaration</fullName>
                <label>Insurance Declaration</label>
            </value>
            <value>
                <fullName>insurance_card</fullName>
                <label>Insurance Card</label>
            </value>
            <value>
                <fullName>court_transcript</fullName>
                <label>Court Transcript</label>
            </value>
            <value>
                <fullName>deposition_transcript</fullName>
                <label>Deposition Transcript</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>police_report</fullName>
                <label>Police Report</label>
            </value>
            <value>
                <fullName>invoice</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>medical_record</fullName>
                <label>Medical Record</label>
            </value>
            <value>
                <fullName>drivers_license</fullName>
                <label>Drivers License</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>