unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Complete__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the all processes required for file upload have been complete.</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>