unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Created_Date_Legacy__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Created_Date_Legacy__c</fullName>
    <label>Created Date Legacy</label>
    <type>DateTime</type>
</CustomField>