unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Delete__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator for a file as being ready to be permanently deleted.</description>
    <label>Docrio Deleted</label>
    <type>Checkbox</type>
</CustomField>