unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Description__c</fullName>
    <description>The description of a file; can serve as a place for notes as well as an initial implementation of tags.</description>
    <label>Long Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>