unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Do_Not_Archive__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Do_Not_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if we want to avoid archiving the file.</description>
    <label>Do Not Archive</label>
    <type>Checkbox</type>
</CustomField>