unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Document_Category__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Document_Category__c</fullName>
    <description>Category of the file - used to organize files by folder in the File Viewer component.</description>
    <inlineHelpText>Use the document category/subcategory to organize your files.</inlineHelpText>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emails</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Client Documents</fullName>
            </value>
            <value>
                <fullName>Litigation Documents</fullName>
            </value>
            <value>
                <fullName>Case Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>