unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Document_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Document_Subcategory__c</fullName>
    <description>Subcategory of the file - used to organize files by folder in the File Viewer component.</description>
    <label>Document Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_docs__Document_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Police Reports</fullName>
            </value>
            <value>
                <fullName>Motions</fullName>
            </value>
            <value>
                <fullName>Filings</fullName>
            </value>
            <value>
                <fullName>Pleadings</fullName>
            </value>
            <value>
                <fullName>Letters</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>