unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Email_Message__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Email_Message__c</fullName>
    <description>Holds a &#39;lookup&#39; to the Email Message that this file is associated with. Note: this field will only be populated if this file is the actual email message file - not an attachment.</description>
    <label>Email Message</label>
    <length>18</length>
    <type>Text</type>
</CustomField>