unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Email_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Email_Sent_Date_Time__c</fullName>
    <description>Populated via Email Sync on email files.</description>
    <label>Email Sent Date Time</label>
    <type>DateTime</type>
</CustomField>