unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__External_File_Path__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__External_File_Path__c</fullName>
    <description>The path of a file in relation to an external system.</description>
    <inlineHelpText>The path of a file in relation to an external system.</inlineHelpText>
    <label>External File Path</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>