unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__External_ID__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__External_ID__c</fullName>
    <description>Stores a unique identifier from an external system.</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>