unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__File_Link__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Link__c</fullName>
    <description>A direct link to the File Info record, which will lead to a page containing details of the file.</description>
    <formula>&quot;/lightning/r/litify_docs__File_Info__c/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Link</label>
    <type>Text</type>
</CustomField>