unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__File_Size__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Size__c</fullName>
    <description>File size in bytes. Displayed contextually in KB,MB, GB depending on file size.</description>
    <label>File Size</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>