unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Path__c</fullName>
    <description>The location of the file within the folder structure of the record to which the file is related. Stored in JSON format.</description>
    <label>Parent Folder</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>