unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Folder_Path_First_255__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Path_First_255__c</fullName>
    <description>The first 255 characters of folder path</description>
    <label>Folder Path First 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>