unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__From__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__From__c</fullName>
    <description>Tracks the origin of a file.</description>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>