unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Has_Attachments_Legacy__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Has_Attachments_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator for a file that has attachments in a legacy system.</description>
    <label>Has Attachments Legacy</label>
    <type>Checkbox</type>
</CustomField>