unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Latest_Version__c</fullName>
    <description>The number of the latest version of the file.</description>
    <label>Latest Version Rollup</label>
    <summaryForeignKey>litify_docs__File_Info_Version__c.litify_docs__File_Info__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>