unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Latest_Version_Formula__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Latest_Version_Formula__c</fullName>
    <formula>IF(ISBLANK(litify_docs__Version_Id__c) , litify_docs__Latest_Version__c, litify_docs__Latest_Version__c + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>