unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Merge_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Merge_Id__c</fullName>
    <description>The unique identifier used by the merge engine to identify a file.</description>
    <label>Merge Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>