unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Origin_Merge_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Origin_Merge_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Merge Template record from which the File Info record was created.</description>
    <inlineHelpText>The Merge Template record from which the File Info record was created.</inlineHelpText>
    <label>Origin Merge Template</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>File Info</relationshipLabel>
    <relationshipName>File_Info</relationshipName>
    <type>Lookup</type>
</CustomField>