unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Original_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Original_Id__c</fullName>
    <description>The id of the file prior to being archived.</description>
    <externalId>true</externalId>
    <label>Original Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>