unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Portal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portal Account</relationshipLabel>
    <relationshipName>Portal_Account</relationshipName>
    <type>Lookup</type>
</CustomField>