unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Related_To__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Related_To__c</fullName>
    <description>The Id of the record that the file is related to.</description>
    <externalId>true</externalId>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>