unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Related_To_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Related_To_Api_Name__c</fullName>
    <description>The API name of the SObject that the file is related to.</description>
    <externalId>true</externalId>
    <label>Related To Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>