unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Tag__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Tag__c</fullName>
    <description>Tag Description here</description>
    <inlineHelpText>Tag help text here</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_docs__Document_Tags</valueSetName>
    </valueSet>
</CustomField>