unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__To__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__To__c</fullName>
    <description>Tracks the destination or recipient of a file.</description>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>