unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Updated_By__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Updated By</relationshipLabel>
    <relationshipName>Updated_By</relationshipName>
    <type>Lookup</type>
</CustomField>