unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Updated_By_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Updated_By_Name__c</fullName>
    <description>The updated by name for use with client portal.</description>
    <formula>litify_docs__Updated_By__r.FirstName + &#39; &#39; +  litify_docs__Updated_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated By Name</label>
    <type>Text</type>
</CustomField>