unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Updated_On__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Updated_On__c</fullName>
    <label>Updated On</label>
    <type>DateTime</type>
</CustomField>