unpackaged/main/default/objects/litify_docs__File_Info__c/fields/litify_docs__Version_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Version_Id__c</fullName>
    <description>The id of the version of the file stored in Amazon S3.</description>
    <label>Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>